Content and fix pagination on small screens

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -211,8 +211,14 @@ body {
   .mycontent-left {
     border-right: 1px solid #333;
   }
+  @media (max-width: 992px) {
+    .mycontent-left {
+      border-right: 0px;
+      border-bottom: 1px solid #333;
+    }
+  }
 
-  .col-xs-6 {
+  .col-xs-12 {
     margin-top: 30px;
     i {
       font-size: 60px;
@@ -228,6 +234,67 @@ body {
       a:hover {
         text-decoration: underline;
       }
+    }
+  }
+
+  .col-md-6 {
+    margin-top: 30px;
+    i {
+      font-size: 60px;
+      display:block;
+      text-align:center;
+      margin-bottom: 15px;
+    }
+    h4 {
+      a {
+        color: $orange;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .col-md-3 {
+    margin-top: 30px;
+    i {
+      font-size: 60px;
+      display:block;
+      text-align:center;
+      margin-bottom: 15px;
+    }
+    h4 {
+      font-size: 24px;
+      a {
+        font-size: 24px;
+        color: $orange;
+        text-decoration: none;
+      }
+      a:hover {
+        font-size: 24px;
+        text-decoration: underline;
+      }
+    }
+  }
+
+  @media (max-width: 767px) {
+    .pagination ul {
+      display: inline-block;
+    }
+
+
+    .pagination>ul {
+      height: 100%;
+      padding: 0px;
+    }
+
+    .pagination li.next {
+      position: relative;
+    }
+
+    .pagination li.previous {
+      position: relative;
     }
   }
 }
